ChangeLog for 2.53.1

//Beta 20
The #include directive now scans all include paths first, root last,
	while the import directive scans root first; to match 2.55.
	( ZoriaRPG, 23rd December, 2019 )

//Beta 19
Fixed animation type on Daira enemy in qst.dat.
Fix line numbers being literal, not *10000. They need to be *10000
	in 2.53.1.
Optimised ZScript compiler function calls to use PUSHV, instead of SETV, then PUSHR.
Added OPushImmediate opcode to the parser.
Added an emulation flag for buggy ->Next combo behaviour.
Fixed the issue reported by Matthew, where a Slash->Next combo
	that transformed into a Step->Secrets combo would immediately transform
	into the secret combo of the step combo, without being stepped upon,
	immediately after being slashed.
	( ZoriaRPG, 17th December, 2019 )

//Beta 18
Fix and clean up Compiler dialoge. 
Added Menu: Tools->ZQuest Settings->Compiler, with option to set
	header guard value.
Note how to cause header guards to match the filename instead of quotedstrings.	
Make header guard tokens case-insensitive.
Added zquest.cfg option HEADER_GUARD. At present, this matches
	the full quoted string, but should we ever want to match the
	filename only, I added a note in ffscript.ypp, line 680
	on how to revert to doing that.
	( ZoriaRPG, 10th December, 2019 )
	
Fixed illegal ternary token error on ':'
	( ZoriaRPG, 8th December, 2019 )

//Beta 17
Fixed a possible crash when saving MIDI files from ZC Player.
	( ZoriaRPG, 8th December, 2019 )

//Beta 16
Clear the panel recent screen buttons when creating a new quest.
Clear the panel recent screen buttons to prevent crashes from invalid maps.
	( ZoriaRPG, 26th November, 2019 )
	
ZQ now displays the decimal value of a screen number in parentheses
	next to the hex value in ZQ.
	( Venrob, 26th November, 2019 )
	
ZScript Dialogue: Import is now Load (hotkey 'L'), to match 2.55. 
	( ZoriaRPG, 25th November, 2019 )

//Beta 15
Display colour in tile editor as hex.
	( Venrob, 24th November, 2019 )
